[package]
name = "easymark"
version = "1.1.1"
description = "Lightweight Markdown rendering utility that just works."
repository = "https://github.com/trypsynth/easymark"
edition = "2024"
rust-version = "1.85.1"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
native-dialog = "0.9.3"
pulldown-cmark = "0.13.0"
webbrowser = "1.0.6"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[profile.dist]
inherits = "release"
