[package]
name = "easymark"
version = "1.2.0"
description = "Lightweight Markdown rendering utility that just works."
repository = "https://github.com/trypsynth/easymark"
edition = "2024"
license = "MIT"
rust-version = "1.85.1"

[dependencies]
anyhow = "1.0.100"
native-dialog = "0.9.3"
pulldown-cmark = "0.13.0"
webbrowser = "1.0.6"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
